@@ -1,0 +1,93 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+  Licensed to the Apache Software Foundation (ASF) under one or more
+  contributor license agreements.  See the NOTICE file distributed with
+  this work for additional information regarding copyright ownership.
+  The ASF licenses this file to You under the Apache License, Version 2.0
+  (the "License"); you may not use this file except in compliance with
+  the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+  -->
+
+<response>
+  <lst name="responseHeader">
+    <int name="status">0</int>
+    <int name="QTime">10</int>
+    <lst name="params">
+      <str name="fl">id</str>
+      <str name="indent">true</str>
+      <str name="q">Test Query</str>
+      <str name="wt">xml</str>
+      <str name="hl">off</str>
+      <str name="clustering">true</str>
+      <str name="rows">5</str>
+    </lst>
+  </lst>
+  <result name="response" numFound="33" start="0">
+    <doc>
+      <str name="id">id1</str>
+    </doc>
+    <doc>
+      <str name="id">id2</str>
+    </doc>
+    <doc>
+      <str name="id">id3</str>
+    </doc>
+    <doc>
+      <str name="id">id4</str>
+    </doc>
+    <doc>
+      <str name="id">id5</str>
+    </doc>
+  </result>
+  <arr name="clusters">
+    <lst>
+      <arr name="labels">
+        <str>label1</str>
+      </arr>
+      <double name="score">0.6</double>
+      <arr name="docs">
+        <str>id1</str>
+        <str>id2</str>
+        <str>id3</str>
+      </arr>
+    </lst>
+    <lst>
+      <arr name="labels">
+        <str>label2</str>
+      </arr>
+      <double name="score">0.93</double>
+      <arr name="docs">
+        <str>id5</str>
+        <str>id6</str>
+      </arr>
+    </lst>
+    <lst>
+      <arr name="labels">
+        <str>label3</str>
+      </arr>
+      <double name="score">1.26</double>
+      <arr name="docs">
+        <str>id7</str>
+        <str>id8</str>
+      </arr>
+    </lst>
+    <lst>
+      <arr name="labels">
+        <str>label4</str>
+      </arr>
+      <double name="score">0.0</double>
+      <bool name="other-topics">true</bool>
+      <arr name="docs">
+        <str>id9</str>
+      </arr>
+    </lst>
+  </arr>
+</response>
